- Finalized Uber-Data_Analysis notebook v0.1 / - Included sample data file

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@ vendor/
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -39,4 +38,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-
+# Ipython Checkpoints
+.ipynb_checkpoints
