--- a/src/composer.json
+++ b/src/composer.json
@@ -8,6 +8,9 @@
       }
   ],
   "require": {},
+  "require-dev": {
+    "phpunit/phpunit": "5.4.*"
+  },
   "autoload": {
   	"psr-4": {
   		"UberCrawler\\": "./"
