--- a/src/composer.json
+++ b/src/composer.json
@@ -9,7 +9,8 @@
   ],
   "require": {},
   "require-dev": {
-    "phpunit/phpunit": "5.4.*"
+    "phpunit/phpunit": "5.4.*",
+    "mikey179/vfsStream": "1.6.*"
   },
   "autoload": {
     "psr-0": {
