--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "require": {},
   "require-dev": {
     "phpunit/phpunit": "5.4.*",
-    "mikey179/vfsStream": "1.6.*"
+    "mikey179/vfsStream": "1.6.*",
+    "satooshi/php-coveralls": "1.0.*"
   },
   "config": {
     "vendor-dir": "./src/vendor"
