--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require-dev": {
     "phpunit/phpunit": "5.4.*",
     "mikey179/vfsStream": "1.6.*",
-    "satooshi/php-coveralls": "1.0.*"
+    "satooshi/php-coveralls": "dev-master"
   },
   "config": {
     "vendor-dir": "./src/vendor"
