--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
           "email": "bassem@interop.link"
       }
   ],
-  "require": {},
+  "require": {
+    "symfony/console": "^3.1"
+  },
   "require-dev": {
     "phpunit/phpunit": "5.4.*",
     "mikey179/vfsStream": "1.6.*",
